--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "nodejstutorial",
+  "name": "nodejsprueba",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon --exec babel-node index.js",
+    "babel-node": "babel-node --presets='@babel/preset-env'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "crypto": "^1.0.1",
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.4",
-    "jwt-simple": "^0.5.6",
-    "moment": "^2.25.3",
-    "mongoose": "^5.9.14"
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
+    "nodemon": "^2.0.6"
   }
 }
