--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.15"
   },
   "devDependencies": {
